[package]
name = "ireul"
version = "0.0.1"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]

[[bin]]
name = "ireul-client"
path = "src/client/main.rs"

[[bin]]
name = "ireul-core"
path = "src/core/main.rs"

[dependencies.ogg]
path = "./ogg"

[dependencies.ogg_clock]
path = "./ogg_clock"

# [dependencies.mio_ogg]
# path = "./mio_ogg"
# 
# [dependencies.mio]
# git = "https://github.com/carllerche/mio"
# 

[dependencies]
phf = "0.7.3"
phf_macros = "0.7.3"
