[package]
name = "ireul"
version = "0.0.1"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]

[[bin]]
name = "ireul-client"
path = "src/client/main.rs"

[[bin]]
name = "ireul-core"
path = "src/core/main.rs"

[dependencies.ogg]
path = "./ogg"

[dependencies.ogg_clock]
path = "./ogg_clock"

[dependencies.ireul_interface]
path = "./ireul_interface"

[dependencies]
phf = "0.7.3"
phf_macros = "0.7.3"
rustc-serialize = "0.3.16"
serde = "*"
serde_macros = "*"
bincode = "*"
log = "0.3"
env_logger = "0.3"
